tdf#82073 RTF import: handle \clcbpatraw

Quoting the RTF spec: "Same as \clcbpatN for use with table styles."

(cherry picked from commit ceaa06bc7153387238eead0a69d874ed35241793)

Conflicts:
	writerfilter/source/rtftok/rtfdispatchvalue.cxx

Change-Id: Icdb89bac5b41036dadb1901f18aeb21ef2512908
Reviewed-on: https://gerrit.libreoffice.org/25103
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 7c105b0014b59349bd110b249e1865d9e6abbb94)